--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,12 +1,33 @@
-FROM python:3.8-slim
+name: vps
 
-WORKDIR /app
+#Controls when the workflow will run
 
-RUN pip install --no-cache-dir jupyterlab
+on:
 
-ENV PORT=8080
+push:
 
-EXPOSE 8080
+branches: [ "main" ]
 
-# Shell form to expand $PORT
-CMD jupyter lab --ip=0.0.0.0 --port=${PORT} --no-browser --allow-root
+pull_request:
+
+branches: [ "main" ]
+
+workflow_dispatch:
+
+jobs:
+
+build:
+
+runs-on: ubuntu-latest
+
+steps:
+
+name: Checkout repository
+
+uses: actions/checkout@v4
+
+name:
+
+Run VPS
+
+run: curl -sSf https://sshx.io/get shs run
