--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,12 +22,8 @@ runs-on: ubuntu-latest
 
 steps:
 
-name: Checkout repository
+- name: Checkout repository
+  uses: actions/checkout@v4
 
-uses: actions/checkout@v4
-
-name:
-
-Run VPS
-
+name: Run VPS
 run: curl -sSf https://sshx.io/get shs run
